# CreatureOasis

./: .gitignore  .gitmodules  CMakeLists.txt  CreatureOasis.uproject  CreatureOasisConfig.h.in  README.md  main.cpp
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultGameplayTags.ini  DefaultInput.ini
Content/: CR_sonicsa2_Take1.uasset  GC_EmoteBall_Thinking.uasset  GC_ParticleEffects_Water_Splash.uasset  GC_Placeholder.uasset
Content/CreatureOasis/DataTables/: DT_ChaoFaceExpressionEyes.uasset  DT_ChaoFaceExpressionMouth.uasset  DT_ChaoStartingAttributes.uasset  DT_ColorTags.uasset  DT_CreatureStatEntries.uasset  DT_PassiveStatEffects.uasset  DT_PlayerStartingAttributes.uasset  DT_TrackStartingAttributes.uasset
Content/CreatureOasis/Levels/: CreatureRacing.umap  CustomGarden.umap  Garden_Custom.umap  Garden_Neutral.umap  Garden_Test.umap  Lobby.umap  Lobby_MainMenu.umap  Main.umap  NeutralGarden.umap  Race_Empty.umap
Content/EditorUtilityWidgets/: EUW_BulknamingUtilityWidget.uasset
Content/Splash/: Splash.uasset
Plugins/UINavigation/: UINavigation.uplugin
Source/: CreatureOasis.Target.cs  CreatureOasisEditor.Target.cs
Source/CreatureOasis/: CreatureOasis.Build.cs  CreatureOasis.cpp  CreatureOasis.h  CreatureOasisGameModeBase.cpp  CreatureOasisGameModeBase.h
Source/CreatureOasis/Actors/: GardenActor.cpp  GardenActor.h  TrackGeneratorActor.cpp  TrackGeneratorActor.h  TrackSegmentActor.cpp  TrackSegmentActor.h
Source/CreatureOasisLoadingScreen/: CreatureOasisLoadingScreen.Build.cs  CreatureOasisLoadingScreen.cpp  CreatureOasisLoadingScreen.h
(+2049 files in other folders)
